--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;400;900&display=swap");
 /* -- Rubik Mono One */
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap");
+/* -- Karla */
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&display=swap');
+/* -- Oswald */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap');
 
 /* Tailwind */
 @tailwind base;
